# text-classification-pipeline

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
docs/plans/: 2026-02-22-test-csv-replacement-design.md  2026-02-22-test-csv-replacement.md  2026-02-27-ui-redesign-design.md  2026-02-27-ui-redesign.md  2026-02-28-low-light-comfort-ui-design.md  2026-02-28-low-light-comfort-ui.md
tests/: test_streamlit_app.py
tests/data/csv/: app_reviews.csv  customer_reviews_sample.csv  mixed_sample.csv  movie_reviews.csv  product_reviews.csv  restaurant_reviews.csv  social_media.csv
